test/distributions/block/emptyBbox.good
emptyBbox.chpl:4: error: halt reached - blockDist() requires a non-empty boundingBox
